leptos-fluent-macros/tests/ui/leptos_fluent/fail/empty_parameter.stderr
error: Expected an expression with 'key: value', '#[...] key: value', 'key,' or `#[...] key,` format. Found:
       : "foo",
  --> tests/ui/leptos_fluent/fail/empty_parameter.rs:17:9
   |
17 |         : "foo",
   |         ^
